test/classes/forwarding/forwarding-self.good
forwarding-self.chpl:7: In function 'main':
forwarding-self.chpl:4: error: forwarding cycle detected
forwarding-self.chpl:2: note: for the type A
